1133008471	Verbaute Rohstoffe zählen jetzt nicht mehr in den Handelskurs hinein, es werden nur noch vorhandene Rohstoffe benutzt.
1133002644	Neue Versionsnummer: 0.0.5
1133002641	Besserer DB-Locking-Mechanismus, hoffen wir, dass dieser ein paar Bugs behebt.
1133001344	Aufgrund eines Tippfehlers wurde bis jetzt bei der Neuberechnung der Punktzahl vergessen, Flotten, die unterwegs waren, miteinzubeziehen.
1132776960	Neue Versionsnummer: 0.0.4
1132776958	Interne Änderungen, mehr Sicherheit in der Datenbank.
1132776942	Neuer Algorithmus für den Handelskurs, hoffen wir, dass dieser funktioniert.
1132776838	Changelog ins Spiel integriert.
1132694764	Neue Versionsnummer: 0.0.3
1132694762	SVN-Version von überflüssigen Grafiken befreit.
1132694752	Anzeigefehler (Internet Explorer) in der Karte behoben: Mini-Planeten-Bilder hatten weißen Hintergrund.
1132694725	Anzeigefehler (Opera) in der Übersicht behoben: Buchstaben wurden abgeschnitten.
1132692939	Neue Versionsnummer: 0.0.2
1132692937	Neuer Algorithmus für die Berechnung von Gebäudebauzeiten.
1132692867	Anzeigefehler (Firefox) in der Karte behoben: Die Systemwahl war zu weit rechts.
1132692845	Anzeigefehler (Opera) in der Karte behoben: Buchstaben wurden abgeschnitten.
1132686931	Bug in der Rohstoffansicht behoben.
1132663239	Neue Versionsnummer: 0.0.1
1132663237	Neuer Algorithmus für die Berechnung des Planetenbildtyps.
1132663219	Neuer Algorithmus für die Flugzeitberechnung.
1132663204	Neuer Algorithmus für den Handelskurs.
1132614464	Neue Versionsnummer: 0.0.0
1132614454	Versionsmanagement eingeführt.
1132610750	Doppelklickschutz für Nachrichtenversand.
1132608487	IP-Schutz ist nun deaktivierbar.
1132608476	Da einige Benutzer sich nicht in der Lage zeigten, sich ihre gewünschte Schrift im Browser einzustellen, wird standardmäßig meine Lieblingsschrift verwandt.
1132607266	Die Abhängigkeiten heißen jetzt „Forschungsbaum“.