@@ -9,3 +9,4 @@ Gesamt ausgegebene Rohstoffe in die Imperiumsübersicht verlagern.
 Allianzsystem
 Adminbereich: Bei Scan nach Multis auch nach doppelten E-Mail-Adressen nachschauen
 Screenshots auf die Startseite einfügen.
+Bei Kolonisierung stimmt der aktive Planet vielleicht nicht mehr.
