@@ -488,21 +488,6 @@
 									universe::set_planet_info($koords[0], $koords[1], $koords[2], $planet_info[0], $ev_username, $new_planet_array['name']);
 
 									$user_array['planets'][] = $new_planet_array;
-									$this_pos = $this_planet['pos'];
-									usort($user_array['planets'], 'sort_planets');
-
-									# Position des aktuellen Planeten neu bestimmen
-									$planets = array_keys($user_array['planets']);
-									foreach($planets as $planet)
-									{
-										if($user_array['planets'][$planet]['pos'] == $this_pos)
-										{
-											$_SESSION['act_planet'] = $planet;
-											$GLOBALS['this_planet'] = &$user_array['planets'][$planet];
-											$user_array['last_planet'] = $_SESSION['act_planet'];
-											break;
-										}
-									}
 
 									# Statistiken neu berechnen
 									highscores::recalc2();
