@@ -1,8 +1,8 @@
 #time,#ress,body { background-color:#124; }
 #time dt,#time dd,#ress dt,#ress dd,#navigation,#content-13,.ress-prod,.ress-prod th,.ress-prod td,.ress-prod tfoot .c-stunde th,.ress-prod tfoot .c-stunde td { background-color:#457; }
-.karte-system td.c-aktionen a,#planets dt { color:#457; }
+.karte-system td.c-aktionen a,#planets dt,.planeten-reihenfolge .aktionen { color:#457; }
 .deps thead,#content-12 h1,#content-11 h2,#content-13 h3,#content-13 .desc-values h3,#content-12 #content-13 .desc-prod h3,#content-12 #content-13 .desc-values h3,.desc-prod tr:hover td,.desc-prod tr:hover th,.desc-prod tr.active td,.desc-prod tr.active th,.desc-values tr:hover td,.desc-values tr:hover th,#content-11 .nachricht-informationen.type-2.html dd.c-nachricht h3,.nachricht-informationen.type-2.html dd.c-nachricht h4,#content-12 #content-13 .desc-prod h3,#content-12 .nachricht-informationen.type-1 h3,#content-12 .nachricht-informationen.type-1 h4,.changelog li:hover { background-color:#568; }
-#time,#time dt,#time dd,#ress,#ress dt,#ress dd,#content-13,#content-12 h1,#content-11 h2,#content-13 h3,#content-12 #content-13 .desc-values h3,fieldset,.item,.ress-prod,.ress-prod th,.ress-prod td,.ress-prod tfoot .c-stunde th,.ress-prod tfoot .c-stunde td,.deps .c-item,.deps td,.desc-prod table,.desc-values table,#content-12 #content-13 .desc-prod h3,#content-12 #content-13 .desc-values h3,.desc-prod td,.desc-prod th,.desc-values td,.desc-values th,.punkte,.daten,.punkte dt,.daten dt,.punkte dd,.daten dd,.queue,.queue li,.queue .restbauzeit,.karte-system th,.karte-system td,.nachrichten-kategorien dd,.nachricht-informationen dd.c-nachricht,.nachrichten-kategorien dd,.nachrichten-kategorien dd.c-verbuendete,.nachrichten-kategorien dd.c-gesamt,.nachrichten-liste th,.nachrichten-liste td,.nachricht-informationen dt,.nachricht-informationen dd,.flotte-versenden .flotte-schiffe dd,.flotte-versenden-2 dl,.flotte-versenden-2 dt,.flotte-versenden-2 dd,#planets li,#planets li.active,#flotten dt,#flotten dd,#content-11 .nachricht-informationen.type-2.html dd.c-nachricht h3,.nachricht-informationen.type-2.html dd.c-nachricht h4,.highscores td,.highscores th,.buendnisse-liste ul li,.buendnisse,.handelsrechner-handelskurs dl dt,#content-12 #content-13 .desc-prod h3,.flotte-anzahl,.buendnis-informationen li,.buendnis-informationen,.playerinfo-planeten,.playerinfo-planeten li,.flotte-versandt dl,.flotte-versandt dt,.flotte-versandt dd,.nachrichtentypen-empfangen table,.nachrichtentypen-empfangen th.c-ankunft,.nachrichtentypen-empfangen th.c-rueckkehr,.nachrichtentypen-empfangen tbody th,.nachrichtentypen-empfangen tbody td,#content-12 .nachricht-informationen.type-1 h3,.nachricht-informationen.type-1 th,.nachricht-informationen.type-1 td,#content-12 .nachricht-informationen.type-1 h4,.nachricht-informationen.type-1 p.keine,.changelog,.changelog li { border-color:#679; }
+#time,#time dt,#time dd,#ress,#ress dt,#ress dd,#content-13,#content-12 h1,#content-11 h2,#content-13 h3,#content-12 #content-13 .desc-values h3,fieldset,.item,.ress-prod,.ress-prod th,.ress-prod td,.ress-prod tfoot .c-stunde th,.ress-prod tfoot .c-stunde td,.deps .c-item,.deps td,.desc-prod table,.desc-values table,#content-12 #content-13 .desc-prod h3,#content-12 #content-13 .desc-values h3,.desc-prod td,.desc-prod th,.desc-values td,.desc-values th,.punkte,.daten,.punkte dt,.daten dt,.punkte dd,.daten dd,.queue,.queue li,.queue .restbauzeit,.karte-system th,.karte-system td,.nachrichten-kategorien dd,.nachricht-informationen dd.c-nachricht,.nachrichten-kategorien dd,.nachrichten-kategorien dd.c-verbuendete,.nachrichten-kategorien dd.c-gesamt,.nachrichten-liste th,.nachrichten-liste td,.nachricht-informationen dt,.nachricht-informationen dd,.flotte-versenden .flotte-schiffe dd,.flotte-versenden-2 dl,.flotte-versenden-2 dt,.flotte-versenden-2 dd,#planets li,#planets li.active,#flotten dt,#flotten dd,#content-11 .nachricht-informationen.type-2.html dd.c-nachricht h3,.nachricht-informationen.type-2.html dd.c-nachricht h4,.highscores td,.highscores th,.buendnisse-liste ul li,.buendnisse,.handelsrechner-handelskurs dl dt,#content-12 #content-13 .desc-prod h3,.flotte-anzahl,.buendnis-informationen li,.buendnis-informationen,.playerinfo-planeten,.playerinfo-planeten li,.flotte-versandt dl,.flotte-versandt dt,.flotte-versandt dd,.nachrichtentypen-empfangen table,.nachrichtentypen-empfangen th.c-ankunft,.nachrichtentypen-empfangen th.c-rueckkehr,.nachrichtentypen-empfangen tbody th,.nachrichtentypen-empfangen tbody td,#content-12 .nachricht-informationen.type-1 h3,.nachricht-informationen.type-1 th,.nachricht-informationen.type-1 td,#content-12 .nachricht-informationen.type-1 h4,.nachricht-informationen.type-1 p.keine,.changelog,.changelog li,.planeten-reihenfolge li { border-color:#679; }
 
 #navigation { border-color:#568; }
 #navigation li { border-color:#568; }
@@ -17,5 +17,5 @@ select:hover,select:focus,select:active,input:hover,input:focus,input:active,tex
 #content-13 * h3 { background-color:transparent; }
 .nachricht-informationen dd.c-nachricht { border-top-color:transparent; border-right-color:transparent; border-bottom-color:transparent; }
 
-a:hover,a:focus,#flotten .beschreibung:hover { color:#bbd; }
+a:hover,a:focus,#flotten .beschreibung:hover,.planeten-reihenfolge .aktionen a:hover,.planeten-reihenfolge .aktionen a:focus { color:#bbd; }
 #flotten .rueckflug .beschreibung:hover,.nachrichten-kategorien .alt a:hover,.nachrichten-kategorien .alt a:focus,.nachrichten-liste .alt a:hover,.nachrichten-liste .alt a:focus { color:#779; }
