@@ -397,3 +397,11 @@ br.clear { clear:both; }
 .changelog { text-align:left; margin:.5em; padding:0; border-top:.1em solid #aaa; border-right:.1em solid #aaa; border-left:.1em solid #aaa; list-style-type:none; }
 .changelog li { border-bottom:.1em solid #aaa; padding:.2em .5em; }
 .changelog li:hover { background-color:#888; }
+
+.planeten-reihenfolge { padding:0; border-bottom-style:none; }
+.planeten-reihenfolge ol { list-style-type:none; margin:0; padding:0; font-weight:bold; text-align:left; }
+.planeten-reihenfolge li { position:relative; padding:.2em .5em; border-bottom:.1em solid #aaa; }
+.planeten-reihenfolge .pos { font-weight:normal; }
+.planeten-reihenfolge .aktionen { position:absolute; top:0; right:0; color:#777; word-spacing:-.5ex; padding:.2em .5em; }
+.planeten-reihenfolge .aktionen a { color:#fff; }
+.planeten-reihenfolge .aktionen a:hover,.planeten-reihenfolge .aktionen a:focus { color:#ccc; }
