@@ -1,3 +1,5 @@
+1133042054	Neue Versionsnummer: 0.0.6
+1133042051	Neues Feature: Im Planet-umbenennen-Menü kann man die Reihenfolge seiner Planeten individuell festlegen.
 1133008471	Verbaute Rohstoffe zählen jetzt nicht mehr in den Handelskurs hinein, es werden nur noch vorhandene Rohstoffe benutzt.
 1133002644	Neue Versionsnummer: 0.0.5
 1133002641	Besserer DB-Locking-Mechanismus, hoffen wir, dass dieser ein paar Bugs behebt.
